--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "realestate",
-  "private": true,
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "type": "module",
+
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "framer-motion": "^10.8.5",
-    "react": "^18.2.0",
-    "react-accessible-accordion": "^5.0.0",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-outside-click-handler": "^1.3.0",
-    "swiper": "^9.1.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "@prisma/client": "^5.7.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.7.1"
   }
 }
